--- a/index.html
+++ b/index.html
@@ -234,27 +234,27 @@
                 <table class="schedule-table">
                     <thead>
                         <tr>
-                            <th>Time</th>
+                            <th>Date</th>
                             <th>Location</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>6:00 AM </td>
-                            <td>Residential Areas</td>
+                            <td> 01/03/2025</td>
+                            <td>Karigari Vaban</td>
                         </tr>
                         <tr>
-                            <td>8:35 AM </td>
-                            <td>Commercial Areas</td>
+                            <td> 27/02/2025 </td>
+                            <td> Newtown </td>
                         </tr>
                         <tr>
-                            <td>11:43 PM</td>
-                            <td>Industrial Zones</td>
+                            <td> 23/02/2025</td>
+                            <td>Park Street</td>
                            
                         </tr>
                         <tr>
-                            <td>2:22 PM</td>
-                            <td>Special Locations</td>
+                            <td> 22/03/2025</td>
+                            <td>Rajarhat</td>
                             
                         </tr>
                     </tbody>
