--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
             border-radius: 4px;
             cursor: pointer;
             font-weight: bold;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+    margin-left: 500px;
+        }
     </style>
 </head>
     </style>
@@ -300,7 +302,7 @@
                         .openPopup();
                 });
             </script>
-
+<br/>
          <botton class="msg">Dispatch Message</botton>
         <footer>
             <p>Emergency Contact: (555) 0123-4567</p>
