--- a/html-folder/login.html
+++ b/html-folder/login.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="/css-folder/nav.css">
     <link rel="stylesheet" href="/css-folder/login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <nav> 
-        <a href="/index.html">Clean India Grow India</a>
-        <img src="/images/indialogo.png" alt="logo">
- 
-    <div class="nav-link">
-        <ul>
-            <li>
-                <a href="/index.html">HOME</a>
-            </li>
-            <li>
-                <a href="/html-folder/about.html">ABOUT</a>
-            </li>
-            <li>
-                <a href="/html-folder/login.html">LOGIN</a>
-            </li>
-            <li>
-                <a href="/html-folder/profile.html">PROFILE</a>
-            </li>
-            <li>
-                <a href="/html-folder/contact.html">CONTACT</a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
-<section class="footer">
-    <div class="footer-container">
-        <p>&copy; 2025 Smart India Clean India. All rights reserved.</p>
-        <div class="social-icon">
-        <div> <a href="www.facebook.com" target="_blank"> <i class="fa-brands fa-facebook fa-xl"></i></a></div>
-        <div> <a href="www.instsgram.com" target="_blank"> <i class="fa-brands fa-instagram fa-xl"></i></a></div>
-        <div> <a href="www.twitter.com" target="_blank"> <i class="fa-brands fa-x-twitter fa-xl"></i></a></div>
-        <div> <a href="www.linkedin.com" target="_blank"> <i class="fa-brands fa-linkedin fa-xl"></i></a></div>
-    </div>
-    </div>
-</section>
-    
+<body>
+    <section id="signup">
+        <div class="register ">
+            <h2>Hello, Welcome</h2>
+            <P>Don't have any account?</P>
+            <button>Register</button>
+        </div>
+        <div class="login">
+            <form action="">
+                <h2>Login</h2>
+                <span><input type="text" placeholder="Username"><i class="fa-solid fa-user"></i></span>
+                <span><input type="password" placeholder="Password"><i class="fa-solid fa-lock"></i></span>
+                <a href="">Forgot password?</a>
+                <button>Login</button>
+                <p>Or login using different platfrom</p>
+             <i class="fa-brands fa-google"></i>
+            </form>
+        </div>
+         <div class="reg_login toggle login">
+            <form action="">
+                <h2>Register</h2>
+                <span><input type="text" placeholder="Username"><i class="fa-solid fa-user"></i></span>
+                <span><input type="email" placeholder="Email"><i class="fa-solid fa-lock"></i></span>
+                <span><input type="password" placeholder="Password"><i class="fa-solid fa-lock"></i></span>
+                <a href="">Forgot password?</a>
+                <button>Login</button>
+                <p>Or login using different platfrom</p>
+             <i class="fa-brands fa-google"></i>
+            </form>
+        </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/58cd1ba0fe.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
