--- a/html-folder/login.html
+++ b/html-folder/login.html
@@ -14,12 +14,12 @@
 
 <body>
     <section id="signup">
-        <div class="register ">
+        <div id="reg_text" class="register ">
             <h2>Hello, Welcome</h2>
             <P>Don't have any account?</P>
-            <button>Register</button>
+            <button id="register_btn">Register</button>
         </div>
-        <div class="login">
+        <div id="login_form" class="login">
             <form action="">
                 <h2>Login</h2>
                 <span><input type="text" placeholder="Username"><i class="fa-solid fa-user"></i></span>
@@ -30,7 +30,7 @@
              <i class="fa-brands fa-google"></i>
             </form>
         </div>
-         <div class="reg_login toggle login">
+         <div id="reg_form" class="reg_login toggle login">
             <form action="">
                 <h2>Register</h2>
                 <span><input type="text" placeholder="Username"><i class="fa-solid fa-user"></i></span>
@@ -45,6 +45,6 @@
     </section>
 
     <script src="https://kit.fontawesome.com/58cd1ba0fe.js" crossorigin="anonymous"></script>
-
+    <script src="/js-folder/login.js"></script>
 </body>
 </html>
