--- a/html-folder/about.html
+++ b/html-folder/about.html
@@ -11,13 +11,13 @@
 <body>
     <section class="header">
         <nav> 
-            <a href="/index.html">Smart India Clean India</a>
+            <a href="/govt.html">Smart India Clean India</a>
             <img src="/images/indialogo.png" alt="logo">
         <div class="nav-link" id="nav-link">
             <i class="fa-solid fa-xmark fa-lg" id="nav-cross"></i>
             <ul>
                 <li>
-                    <a href="/index.html">HOME</a>
+                    <a href="/govt.html">HOME</a>
                 </li>
                 <li>
                     <a href="/html-folder/about.html">ABOUT</a>
