--- a/html-folder/govt.html
+++ b/html-folder/govt.html
@@ -17,19 +17,16 @@
 
 <header>
     <nav> 
-        <a href="/index.html">Clean India Grow India</a>
+        <a href="/govt.html">Clean India Grow India</a>
         <img src="/images/indialogo.png" alt="logo">
         <div class="h1line">Waste Management Dashboard</div>
     <div class="nav-link">
         <ul>
             <li>
-                <a href="/index.html">HOME</a>
+                <a href="/govt.html">HOME</a>
             </li>
             <li>
                 <a href="/html-folder/about.html">ABOUT</a>
-            </li>
-            <li>
-                <a href="/html-folder/login.html">LOGIN</a>
             </li>
             <li>
                 <a href="/html-folder/profile.html">PROFILE</a>
