--- a/html-folder/profile.html
+++ b/html-folder/profile.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <nav> 
-        <a href="/index.html">Clean India Grow India</a>
+        <a href="/govt.html">Clean India Grow India</a>
         <img src="/images/indialogo.png" alt="logo">
        
     <div class="nav-link">
         <ul>
             <li>
-                <a href="/index.html">HOME</a>
+                <a href="/govt.html">HOME</a>
             </li>
             <li>
                 <a href="/html-folder/about.html">ABOUT</a>
