--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div id="log_text" class="register2">
             <h2>Hello, Welcome</h2>
+            <P>Already have an account.</P>
             <button id="register_btn2">Continue With Login</button>
         </div>
         <div id="login_form" class="login">
