--- a/index.html
+++ b/index.html
@@ -28,24 +28,65 @@
         <div id="login_form" class="login">
             <form action="">
                 <h2>Login</h2>
-                <span><input class="input1" type="text" placeholder="Username" required><i class="fa-solid fa-user"></i></span>
-                <span><input class="input1" type="password" placeholder="Password" required><i class="fa-solid fa-lock"></i></span>
+                <span><input class="input1" type="text" placeholder="Unique Govt. Id" required><i
+                        class="fa-solid fa-user"></i></span>
+                <span><input class="input1" type="password" placeholder="Password" required><i
+                        class="fa-solid fa-lock"></i></span>
                 <a href="">Forgot password?</a>
                 <a id="login_btn">Login</a>
                 <p>Or login using different platfrom</p>
-             <i class="fa-brands fa-google"></i>
-             <h4></h4>
+                <i class="fa-brands fa-google"></i>
+                <h4></h4>
             </form>
         </div>
-         <div id="reg_form" class="reg_login toggle login">
+        <div id="reg_form" class="reg_login toggle login">
             <form action="">
                 <h2>Register</h2>
-                <span><input class="input2" type="text" placeholder="Username"><i class="fa-solid fa-user"></i></span>
-                <span><input class="input2" type="email" placeholder="Email"><i class="fa-solid fa-envelope"></i></span>
-                <span><input class="input2" type="password" placeholder="Password"><i class="fa-solid fa-lock"></i></span>
+
+                <select id="state" class="input2" name="state">
+                    <option value="">Select State Government:</option>
+                    <option value="Andhra Pradesh">Andhra Pradesh</option>
+                    <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                    <option value="Assam">Assam</option>
+                    <option value="Bihar">Bihar</option>
+                    <option value="Chhattisgarh">Chhattisgarh</option>
+                    <option value="Goa">Goa</option>
+                    <option value="Gujarat">Gujarat</option>
+                    <option value="Haryana">Haryana</option>
+                    <option value="Himachal Pradesh">Himachal Pradesh</option>
+                    <option value="Jharkhand">Jharkhand</option>
+                    <option value="Karnataka">Karnataka</option>
+                    <option value="Kerala">Kerala</option>
+                    <option value="Madhya Pradesh">Madhya Pradesh</option>
+                    <option value="Maharashtra">Maharashtra</option>
+                    <option value="Manipur">Manipur</option>
+                    <option value="Meghalaya">Meghalaya</option>
+                    <option value="Mizoram">Mizoram</option>
+                    <option value="Nagaland">Nagaland</option>
+                    <option value="Odisha">Odisha</option>
+                    <option value="Punjab">Punjab</option>
+                    <option value="Rajasthan">Rajasthan</option>
+                    <option value="Sikkim">Sikkim</option>
+                    <option value="Tamil Nadu">Tamil Nadu</option>
+                    <option value="Telangana">Telangana</option>
+                    <option value="Tripura">Tripura</option>
+                    <option value="Uttar Pradesh">Uttar Pradesh</option>
+                    <option value="Uttarakhand">Uttarakhand</option>
+                    <option value="West Bengal">West Bengal</option>
+                </select>
+
+
+                <span><input class="input2" type="text" placeholder="Municipality/Panchayat Name"><i
+                        class="fa-solid fa-house-chimney"></i></span>
+                <span><input class="input2" type="email" placeholder="Unique Govt. Id"><i
+                        class="fa-solid fa-user"></i></span>
+                <span><input class="input2" type="text" placeholder="Password"><i
+                        class="fa-solid fa-lock"></i></span>
+                <span><input class="input2" type="password" placeholder="Confirm Password"><i
+                        class="fa-solid fa-lock"></i></span>
                 <a id="register_button">Register</a>
                 <p>Or login using different platfrom</p>
-             <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-google"></i>
             </form>
         </div>
     </section>
@@ -54,4 +95,5 @@
     <script src="https://kit.fontawesome.com/58cd1ba0fe.js" crossorigin="anonymous"></script>
     <script src="/js-folder/login.js"></script>
 </body>
+
 </html>
