--- a/html-folder/govt.html
+++ b/html-folder/govt.html
@@ -21,13 +21,13 @@
 
     <section class="header">
         <nav>
-            <a href="index.html">Smart India Clean India</a>
+            <a href="/html-folder/govt.html">Smart India Clean India</a>
             <img src="/images/indialogo.png" alt="logo">
             <div class="nav-link" id="nav-link">
                 <i class="fa-solid fa-xmark fa-lg" id="nav-cross"></i>
                 <ul>
                     <li>
-                        <a href="/index.html">HOME</a>
+                        <a href="/html-folder/govt.html">HOME</a>
                     </li>
                     <li>
                         <a href="/html-folder/about.html">ABOUT</a>
