--- a/html-folder/govt.html
+++ b/html-folder/govt.html
@@ -76,6 +76,8 @@
             </section>
     </div>
 
+    <button id="asdfg">gchvj</button>
+
    
     <section class="footer">
         <div class="footer-container">
@@ -89,6 +91,10 @@
             </div>
         </div>
     </section>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
     <script src="/js-folder/govt.js"></script>
     <script src="/js-folder/nav.js"></script>
 </body>
